--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -4,6 +4,7 @@
 // Kalidi logo brand color: #FD461E
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
+$footer-background-color: white
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
@@ -28,18 +29,19 @@ $body-color: #333
     margin-top: 0
 
 // Helper Classes
-.full-width-image-container
-  width: 100vw
-  height: 400px
-  position: relative
-  left: 50%
-  right: 50%
-  margin: 5em -50vw
-  background-size: cover
-  background-position: bottom
-  display: flex
-  justify-content: center
-  align-items: center
+// .full-width-image-container
+//   width: 100vw
+//   height: 400px
+//   position: relative
+//   left: 50%
+//   right: 50%
+//   margin: 5em -50vw
+//   background-size: cover
+//   background-position: bottom
+//   display: flex
+//   justify-content: center
+//   align-items: center
+//   background-color: black
 
 .margin-top-0
   margin-top: 0 !important
@@ -48,3 +50,11 @@ $body-color: #333
 
 .alex
   color: red
+
+.container
+  font-family: 'Roboto Mono', Helvetica, Arial, sans-serif
+  line-height: 24px
+  font-size: 13px
+  font-weight: 300
+  color: #987F28
+  letter-spacing: 1px
