--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -5,6 +5,7 @@
 @import "./css/line.css"
 @import "./css/blog.css"
 @import "./css/gallery.scss"
+@import "./css/tabs.css"
 
 // Config vars
 // Kalidi logo brand color: #FD461E
@@ -73,4 +74,6 @@ $navbar-item-hover-color: black
 //   margin-left: 0 !important
 //   margin-right: 0 !important
 
-
+.gatsby-resp-image-image
+  border: 2px solid yellow
+  float: left
