--- a/src/components/css/blog.css
+++ b/src/components/css/blog.css
@@ -1,7 +1,17 @@
 .allan {
+    position: relative;
     border: 1px solid transparent;
     margin-top: 50px;
     background-color: white;
     padding: 40px; 
-    margin-top: -48px;
+    margin-top: -48px;  
   }
+.allan::before { 
+    position: absolute;
+    content: "";
+    left: 10px;
+    right: 10px;
+    top: -5px;
+    height: 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+}
