--- a/src/components/scss/gatstrap.scss
+++ b/src/components/scss/gatstrap.scss
@@ -74,17 +74,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-p {
-  font-size: 16px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
+// p {
+//   font-size: 16px;
+//   line-height: 1.5;
+//   margin-bottom: 20px;
+// }
 
-img {
-  margin-bottom: 15px;
-  max-width: 100%;
-}
+// img {
+//   margin-bottom: 0px;
+//   max-width: 100%;   
+// }
 
-img:hover {
-  animation: pulse 0.5s;
-}
+// img:hover {
+//   animation: pulse 0.5s;
+// }
