--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -7,9 +7,20 @@
 @import "./css/blog.css";
 @import "./css/gallery.scss";
 @import "./css/tabs.css";
+@import "./css/light.scss";
+
+html, body {
+    overflow-x: hidden;
+}
 
 .red {
  color: $red
+}
+
+.card-img-top {
+    margin-bottom: 0;
+    height: 15vw;
+    object-fit: cover;
 }
 
 .full-width-image-container {
@@ -25,15 +36,6 @@
     justify-content: center;
     align-items: center;
 }
-
-.margin-top-0 {
-    margin-top: 0 !important
-}
-
-.navbar, .navbar-menu {
-    box-shadow:none !important;
-}
-
 
 .content, .taglist {
   list-style: none;
@@ -54,11 +56,6 @@
 
 
 .body {
-    font-family: 'Roboto Mono', Helvetica, Arial, sans-serif;
-    line-height: 24px;
-    font-size: 13px;
-    font-weight: 300;
-    color: #987F28;
     letter-spacing: 1px;
 }
 
@@ -66,8 +63,10 @@
 .bg {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 50% 30%;
+    width: 100%;
     height: 50vh;
+
 }
 
 
@@ -75,3 +74,14 @@
     border: 2px solid yellow;
     float: left;
 }
+.t {
+    background-color: whitesmoke;
+    cursor: pointer;
+    position: relative;
+    top: 0;
+    transition: top ease 0.5s;
+  }
+  .t:hover {
+    top: -10px;
+    background-color: white;
+  }
