--- a/src/components/css/tabs.css
+++ b/src/components/css/tabs.css
@@ -1,6 +1,10 @@
 .tab-list {
     border-bottom: 1px solid #ccc;
     padding-left: 0;
+    cursor: pointer;
+  }
+  .tab-list:hover {
+    color: black;
   }
   
   .tab-list-item {
@@ -11,7 +15,7 @@
   }
   
   .tab-list-active {
-    background-color: white;
+    background-color: whitesmoke;
     border: solid #ccc;
     border-width: 1px 1px 0 1px;
   }
@@ -22,7 +26,4 @@
     font-size: 1rem;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
-    overflow-x: auto;
-    white-space: nowrap;
 }
