--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -8,13 +8,10 @@
 @import "./css/gallery.scss";
 @import "./css/tabs.css";
 @import "./css/light.scss";
+@import "./css/slider.css";
 
 html, body {
     overflow-x: hidden;
-}
-
-.red {
- color: $red
 }
 
 .card-img-top {
@@ -22,27 +19,28 @@ html, body {
     height: 15vw;
     object-fit: cover;
 }
-
-.full-width-image-container {
-    width: 100vw;
-    height: 400px;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin: 5em -50vw;
-    background-size: cover;
-    background-position: bottom;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+.gatsby-image-wrapper img {
+    object-fit: contain !important; // !important to override the element style
+ }
+// .full-width-image-container {
+//     width: 100vw;
+//     height: 400px;
+//     position: relative;
+//     left: 50%;
+//     right: 50%;
+//     margin: 5em -50vw;
+//     background-size: cover;
+//     background-position: bottom;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
 
 .content, .taglist {
   list-style: none;
   margin-bottom: 0;
   margin-left: 0;
   margin-right: 1.5rem;
-  margin-top: 1.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
@@ -61,27 +59,46 @@ html, body {
 
 
 .bg {
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 30%;
     width: 100%;
     height: 50vh;
-
+}
+.bg::before {  
+  content: '';
+  position: absolute;
+  left: 0; right: 0; top: 0; bottom: 0;
+  z-index: 1;
+  opacity: 0.9;  
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
-
-.gatsby-resp-image-image {
-    border: 2px solid yellow;
-    float: left;
-}
+// .gatsby-resp-image-image {
+//     border: 2px solid yellow;
+//     float: left;
+//     width: 0%;
+//     height: 0%;
+//     vertical-align: left;
+//     /* position: absolut; */
+//     /* top: 0px; */
+//     /* left: 0px; */
+//     /* box-shadow: white 0px 0px 0px 400px inset; */
+//     /* opacity: 1; */
+//     /* transition: opacity 0.5s ease 0s; */
+// }
 .t {
     background-color: whitesmoke;
     cursor: pointer;
     position: relative;
     top: 0;
     transition: top ease 0.5s;
-  }
-  .t:hover {
+}
+.t:hover {
     top: -10px;
     background-color: white;
-  }
+}
+.fixed-top {
+    z-index: 950;
+}
