--- a/src/components/css/blog.css
+++ b/src/components/css/blog.css
@@ -2,10 +2,10 @@
     position: relative;
     border: 1px solid transparent;
     margin-top: 50px;
-    background-color: white;
+    background-color: #FFF;;
     padding: 40px; 
     margin-top: -48px;
-    z-index: 2;  
+    z-index: 5;  
   }
 .allan::before { 
     position: absolute;
