--- a/src/components/css/gallery.scss
+++ b/src/components/css/gallery.scss
@@ -31,16 +31,14 @@
   border-bottom-width: 0;
 }
 .post-info {
-  flex: 1;
-  border: 2px solid green;
+  flex: 1 0 50%;
 }
 .blog-post-preview.inverse > .post-img{
   margin-left: 0;
   margin-right: 1rem;
 }
 .post-img {
-  border: 2px solid yellow;
-  flex: 1;
+  flex: 1 0 50%;
   margin-left: 1rem;
 }
 .post-img .gatsby-image-wrapper > img {
