--- a/src/components/css/gallery.scss
+++ b/src/components/css/gallery.scss
@@ -1,28 +1,11 @@
-// .gallery {
-// //   background-color: red;
-// //   border: 1px solid blue;
-//   display: grid;
-//   grid-gap: 10px;
-//   // padding-left: 105px;
-//   padding-top: 30px;
-//   grid-template-columns: repeat(2, minmax(200px, 1fr));
-
-// .item {
-//     img {
-//          width: 100%;
-//          height: 100%;
-//          object-fit: cover;
-//        }
-//     }
-// }
-
 .blog-post-preview {
   display: flex;
   align-items: flex-start;
   justify-content: center;
   padding: 1rem 0.25rem;
-  border: 2px solid rgba(0, 0, 0, 0.04);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.04);
   margin-bottom: 20px;
+  margin: 0 auto;
 }
 .blog-post-preview.inverse{
   flex-direction: row-reverse;
@@ -31,21 +14,37 @@
   border-bottom-width: 0;
 }
 .post-info {
-  flex: 1;
-  border: 2px solid green;
+  // border: 2px solid green;
+  flex: 1 0 50%;
+  // height: 442px;
 }
 .blog-post-preview.inverse > .post-img{
   margin-left: 0;
   margin-right: 1rem;
 }
 .post-img {
-  border: 2px solid yellow;
-  flex: 1;
-  margin-left: 1rem;
+  flex: 1 0 50%;
+  // margin-left: 1rem;
+  // border: 2px solid yellow;
+  // height: 442px;
+  min-height: 100%;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  // width: 20%;
 }
 .post-img .gatsby-image-wrapper > img {
   max-width: 100%;
   max-height: 100%;
+  max-width: 100%;
+  max-height: auto;
+  position: relative;
+  vertical-align: middle;
+  left: 50%;
+  transform: translate(-50%);
+  height: 150px;
+  width: 150px;
+  object-fit:cover;
 }
 .title {
   font-size: 22px;
@@ -74,4 +73,11 @@
   opacity: 0.7;
   letter-spacing: 0.4px;
   margin-bottom: 10px;
+}
+.see-more {
+  color:  #999;
+}
+
+.see-more:hover {
+  color: black;
 }
