--- a/src/components/css/path.css
+++ b/src/components/css/path.css
@@ -9,7 +9,7 @@
 .slug {
     color: #999;
     padding: 8px 0;
-    border-bottom: 1px dotted rgba(150, 150, 150, 0.18)
+    /* border-bottom: 1px dotted rgba(150, 150, 150, 0.18) */
 }
 
 .slug:last-child {
