--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -82,16 +82,22 @@ html, body {
 //     margin-top: 0;
 //   }
 // }
-hr {
-  width: 24px;
-  height: 6px;
-}
-.r {
-    width: 783px;
-    height: 440px;
-}
+// hr {
+//   width: 24px;
+//   height: 6px;
+// }
+// .r {
+//     width: 783px;
+//     height: 440px;
+// }
+// .wp-block-image {
+//     max-width: 100%;
+//     margin-bottom: 1em;
+//     margin-left: 0;
+//     margin-right: 0;
+// }
 .gatsby-resp-image-link {
-   width: 250px;
+   width: 300px;
 }
 .yk {
     display: flex;
@@ -385,10 +391,26 @@ section {
 }
 
 .custom-toggler.navbar-toggler {
-    border-color: rgb(255,102,203);
+    color: rgba(255, 255, 255, 0.5);
+    border-color: rgba(255, 255, 255, 0.1);
+}
+.navbar-toggler {
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: transparent;
+    padding: 0.25rem 0.75rem;
+    border-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    border-image: initial;
+    border-radius: 0.25rem;
 }
 .custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.page {
+    margin-top: 61px;
 }
 
 @media (min-width: 992px) {
