--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -1,7 +1,7 @@
 // loads bootstrap and base styles.
 // @import "~slick-carousel/slick/slick.css";
 //  @import "~slick-carousel/slick/slick-theme.css";
-// @import './scss/gatstrap.scss';
+@import './scss/gatstrap.scss';
 // @import './scss/colors.scss';
 // @import '@fortawesome/fontawesome-free/css/all.min.css';
 // @import 'bootstrap-css-only/css/bootstrap.min.css';
