--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -17,10 +17,11 @@
 @import "./css/tags.css";
 @import "./css/portfolio.css";
 @import "./css/make.css";
+@import "./css/nav.css";
 
 @media (min-width: 1200px) {
 .container {
-    width: 1170px;
+    max-width: 1170px;
     }
 }
 
@@ -57,81 +58,81 @@ html, body {
     overflow-x: hidden;
     padding-top: 33px;
 }
- .navbar-brand  {
-    color:  #333;
-    display: inline-block;
-    padding-top: .3125rem;
-    padding-bottom: .3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
-    line-height: inherit;
-    white-space: nowrap;
-}
+//  .navbar-brand  {
+//     color:  #333;
+//     display: inline-block;
+//     padding-top: .3125rem;
+//     padding-bottom: .3125rem;
+//     margin-right: 1rem;
+//     font-size: 1.25rem;
+//     line-height: inherit;
+//     white-space: nowrap;
+// }
 
-.navbar-brand:hover {
-    color: black;
-}
-.nav-link {
-    color: #999;
-}
-.nav-link:hover {
-    color: black;
-}
-.navbar .navbar-toggler {
-    outline: 0;
-    border-width: 0;
-}
-@media (min-width: 768px) {
-.navbar-expand-md .navbar-toggler {
-    display: none;
-    }
-}
-[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
-    cursor: pointer;
-}
-button, input, optgroup, select, textarea {
-    margin: 0;
-    font-family: inherit;
-}
-@media (min-width: 768px) {
-.navbar-expand-md .navbar-collapse {
-    display: -webkit-flex!important;
-    display: flex!important;
-    -webkit-flex-basis: auto;
-    flex-basis: auto;
-    }
-}
-.navbar-collapse {
-    align-items: center;
-    flex-grow: 1;
-}
-@media (min-width: 768px) {
-.navbar-expand-md .navbar-nav {
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    }
-}
-.ml-auto, .mx-auto {
-    margin-left: auto!important;
-}
-.navbar-nav {
-    display: -webkit-flex;
-    display: flex;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-}
-ul, menu, dir {
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    -webkit-padding-start: 40px;
-}
-.navbar {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    font-weight: 300;
-}
+// .navbar-brand:hover {
+//     color: black;
+// }
+// .nav-link {
+//     color: #999;
+// }
+// .nav-link:hover {
+//     color: black;
+// }
+// .navbar .navbar-toggler {
+//     outline: 0;
+//     border-width: 0;
+// }
+// @media (min-width: 768px) {
+// .navbar-expand-md .navbar-toggler {
+//     display: none;
+//     }
+// }
+// [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+//     cursor: pointer;
+// }
+// button, input, optgroup, select, textarea {
+//     margin: 0;
+//     font-family: inherit;
+// }
+// @media (min-width: 768px) {
+// .navbar-expand-md .navbar-collapse {
+//     display: -webkit-flex!important;
+//     display: flex!important;
+//     -webkit-flex-basis: auto;
+//     flex-basis: auto;
+//     }
+// }
+// .navbar-collapse {
+//     align-items: center;
+//     flex-grow: 1;
+// }
+// @media (min-width: 768px) {
+// .navbar-expand-md .navbar-nav {
+//     -webkit-flex-direction: row;
+//     flex-direction: row;
+//     }
+// }
+// .ml-auto, .mx-auto {
+//     margin-left: auto!important;
+// }
+// .navbar-nav {
+//     display: -webkit-flex;
+//     display: flex;
+//     padding-left: 0;
+//     margin-bottom: 0;
+//     list-style: none;
+// }
+// ul, menu, dir {
+//     -webkit-margin-before: 1em;
+//     -webkit-margin-after: 1em;
+//     -webkit-margin-start: 0px;
+//     -webkit-margin-end: 0px;
+//     -webkit-padding-start: 40px;
+// }
+// .navbar {
+//     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+//     font-weight: 300;
+// }
 .gatsby-resp-image-link {
    width: 244px;
    padding: 13px;
@@ -161,15 +162,15 @@ ul, menu, dir {
 .fixed-top {
     z-index: 950;
 }
-.navbar {
-   display: flex;
-   align-items: center;
-   padding: .5rem 1rem;
-}
-a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
-    color: inherit;
-    text-decoration: none;
-}
+// .navbar {
+//    display: flex;
+//    align-items: center;
+//    padding: .5rem 1rem;
+// }
+// a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
+//     color: inherit;
+//     text-decoration: none;
+// }
 
 .fixed-top {
     position: fixed;
@@ -177,17 +178,17 @@ a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]
     right: 0;
     left: 0;
 }
-.bg-white {
-    background-color: #fff!important;
-}
-@media (min-width: 768px) {
-.navbar-expand-md {
-    -webkit-flex-flow: row nowrap;
-    flex-flow: row nowrap;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-    }
-}
+// .bg-white {
+//     background-color: #fff!important;
+// }
+// @media (min-width: 768px) {
+// .navbar-expand-md {
+//     -webkit-flex-flow: row nowrap;
+//     flex-flow: row nowrap;
+//     -webkit-justify-content: flex-start;
+//     justify-content: flex-start;
+//     }
+// }
 .ex {
     margin-top: 10px;
 }
@@ -454,24 +455,24 @@ section {
  }
 }
 
-.custom-toggler.navbar-toggler {
-    color: rgba(255, 255, 255, 0.5);
-    border-color: rgba(255, 255, 255, 0.1);
-}
-.navbar-toggler {
-    font-size: 1.25rem;
-    line-height: 1;
-    background-color: transparent;
-    padding: 0.25rem 0.75rem;
-    border-width: 1px;
-    border-style: solid;
-    border-color: transparent;
-    border-image: initial;
-    border-radius: 0.25rem;
-}
-.custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
+// .custom-toggler.navbar-toggler {
+//     color: rgba(255, 255, 255, 0.5);
+//     border-color: rgba(255, 255, 255, 0.1);
+// }
+// .navbar-toggler {
+//     font-size: 1.25rem;
+//     line-height: 1;
+//     background-color: transparent;
+//     padding: 0.25rem 0.75rem;
+//     border-width: 1px;
+//     border-style: solid;
+//     border-color: transparent;
+//     border-image: initial;
+//     border-radius: 0.25rem;
+// }
+// .custom-toggler .navbar-toggler-icon {
+//   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+// }
 
 .alter-heading {
     top: 61px;
