--- a/src/components/css/slider.scss
+++ b/src/components/css/slider.scss
@@ -1,12 +1,72 @@
-@media (min-width: 992px) {
-  .carousel {
-    height: 400px;
-    width: 783px;
-    }
-}
+// @media (min-width: 992px) {
+//   .carousel {
+//     height: 400px;
+//     width: 783px;
+//     }
+// }
 
 // @media (min-width: 992px) {
 //   .carousel {
 //     height: 200px;
 //     }
 // }
+
+.slider {
+  position: relative;
+  width: 783px;
+  margin: 0 auto;
+  height: 400px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+@media (max-width: 991px) {
+  .slider {
+    width: 295px;
+    height: 202px;
+  }
+}
+
+.slider-wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.slide {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+.arrow {
+  height: 50px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // background: #f9f9f9;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform ease-in .1s;
+}
+
+.nextArrow {
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  z-index: 999;
+  color: #fff;
+}
+
+.backArrow {
+  position: absolute;
+  top: 50%;
+  left: 25px;
+  z-index: 999;
+  color: #fff;
+}
+
+.fa-arrow-right:before, .fa-arrow-left:before {
+  color: #222
+}
