--- a/src/components/css/slider.scss
+++ b/src/components/css/slider.scss
@@ -56,7 +56,7 @@
   top: 50%;
   right: 25px;
   z-index: 999;
-  color: #fff;
+  // color: #fff;
 }
 
 .backArrow {
@@ -64,7 +64,7 @@
   top: 50%;
   left: 25px;
   z-index: 999;
-  color: #fff;
+  // color: #fff;
 }
 
 .fa-arrow-right:before, .fa-arrow-left:before {
