--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -12,12 +12,26 @@
 @import "./css/tabs.css";
 @import "./css/blog.css";
 @import "./css/light.scss";
-@import "./css/slider.scss";
+// @import "./css/slider.scss";
 @import "./css/path.css";
 @import "./css/tags.css";
 @import "./css/portfolio.css";
 @import "./css/make.css";
 @import "./css/nav.css";
+
+// .slider-container {
+//     width: 100%;
+//     height: 100%;
+    
+//     /* Add this */
+//     position:fixed;
+//     top:0;
+//     left:0;
+    
+// }
+.trial .carousel {
+    height:400px;
+}
 
 .album-single-item:hover .asi-cover{
     opacity: 1;
@@ -361,9 +375,9 @@ html, body {
   color: #987F28;
   letter-spacing: 1px;   
 }
-.trial {
-    margin-bottom: 20px;
-}
+// .trial {
+//     margin-bottom: 20px;
+// }
 .wbp_single{
    text-align: left;
    margin-bottom: 0px !important;  
