fix: css not showing in netlify

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -32,7 +32,10 @@
 .trial .carousel {
     height:400px;
 }
-
+// .carousel .slide img {
+//     height: 100%;  /* change this to whatever you want */
+//     width: auto;
+// }
 .album-single-item:hover .asi-cover{
     opacity: 1;
     cursor: pointer;
