fix: css  in netlify

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -29,6 +29,115 @@
 //     left:0;
     
 // }
+.j1 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .j1 a {
+   float: left;
+   margin-right: 15px;
+  }
+  .j2 {
+   clear: both;  
+   margin-right: 20px;
+  }
+  .j2 a {
+   float: right;
+   margin-left: 10px;
+  }
+  .j3 a {
+      padding-top: 10px;
+  }
+  
+  .r1 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .r1 a {
+    float: left;
+    margin-right: 15px;
+  }
+  .r2 {
+    clear: both;  
+    margin-right: 20px;
+   }
+   .r2 a {
+    float: right;
+    margin-left: 10px;
+   }
+   .r3 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .r3 a {
+    float: right;
+    margin-left: 10px;
+  }
+  .r4 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .r4 a {
+    float: left;
+    margin-right: 15px;
+  }
+  .w1 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .w1 a {
+   float: right;
+   margin-left: 15px;
+  }
+  .w2 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .w2 a {
+   float: left;
+   margin-right: 15px;
+  }
+  .w3 a {
+    float: right;
+    margin-left: 10px;
+   }
+   .w3 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .p1 {
+    margin-right: 20px;
+    clear: both;
+  }
+  .p1 a {
+   float: left;
+   margin-right: 15px;
+  }
+  .p2 {
+    clear: both;  
+    margin-right: 20px;
+   }
+   .p2 a {
+    float: right;
+    margin-left: 10px;
+   }
+  .p3 {
+    margin-bottom: 20px;
+    clear: both;  
+  }
+  .p3 a {
+   float: left;
+   margin-right: 15px;
+  }
+  .p4 {
+    margin-right: 20px;
+    clear: both;  
+  }
+  .p4 a {
+   float: right;
+   margin-left: 10px;
+  }
+  
 .trial .carousel {
     height:400px;
 }
