--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -308,7 +308,7 @@ html, body {
     padding-top: 33px;
 }
 
-.gatsby-resp-image-link {
+a .gatsby-resp-image-link {
     width: 235px;
     padding: 13px;
 }
