fix: one font for the site

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -12,6 +12,9 @@
 @import "./css/nav.css";
 @import "./css//custom.css";
 
+.font {
+    font-size: 18px;
+}
 .album-single-item:hover .asi-cover{
     opacity: 1;
     cursor: pointer;
